--- a/style.css
+++ b/style.css
@@ -657,3 +657,61 @@ li.comment ul.children li {
   background-color: #fff;
   margin-top: 20px;
 }
+/** Gallery **/
+#gallery-1 .gallery-item {
+  width: 50% !important;
+  margin: 0;
+  padding: 0px 5px !important;
+}
+@media only screen and (min-width: 768px) {
+  #gallery-1 .gallery-item {
+    width: 25% !important;
+  }
+}
+#gallery-1 img {
+  border: none !important;
+}
+/** Reservation From **/
+.reservation {
+  background-image: url(img/bg_contact.jpg);
+  background-repeat: no-repeat;
+  background-position: top left;
+}
+@media only screen and (min-width: 768px) {
+  .reservation-info {
+    margin-left: 50%;
+  }
+}
+form.reservation-form h2 {
+  font-size: 20px;
+  font-weight: 700;
+}
+form.reservation-form .field {
+  margin-bottom: 20px;
+  width: 100%;
+}
+form.reservation-form .field input,
+form.reservation-form .field textarea {
+  width: 100%;
+  border: 2px solid #000000;
+  padding: 15px 10px;
+  font-size: 16px;
+}
+form.reservation-form .field textarea {
+  height: 200px;
+}
+form.reservation-form::-webkit-input-placeholder {
+  color: #000000 !important;
+}
+form.reservation-form :-moz-placeholder {
+  color: #000000 !important;
+}
+form.reservation-form ::-moz-placeholder {
+  color: #000000 !important;
+}
+form.reservation-form ::-ms-input-placeholder {
+  color: #000000 !important;
+}
+form.reservation-form input[type="submit"] {
+  border: none;
+}
