--- a/style.css
+++ b/style.css
@@ -86,6 +86,13 @@ h4 {
 .primary:hover {
   background-color: #7b0d04;
 }
+.secondary {
+  background-color: #f19f30;
+  transition: background-color 0.5s ease;
+}
+.secondary:hover {
+  background-color: #da8b20;
+}
 ul {
   list-style: none;
 }
@@ -486,7 +493,7 @@ header.entry-header {
   margin-top: 20px;
 }
 header.entry-header .date,
-.entry-inforomation .date {
+.entry-information .date {
   background-color: #f19f30;
   float: left;
   width: 70px;
@@ -496,14 +503,14 @@ header.entry-header .date,
   margin-right: 20px;
 }
 header.entry-header .date time,
-.entry-inforomation .date time {
+.entry-information .date time {
   font-size: 30px;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   color: #ffffff;
 }
 header.entry-header .date time span,
-.entry-inforomation .date time span {
+.entry-information .date time span {
   font-size: 15px;
   display: block;
   text-transform: uppercase;
@@ -520,16 +527,16 @@ header.entry-header h2 {
   font-weight: 700;
 }
 header.entry-header p.author,
-.entry-inforomation p.author {
+.entry-information p.author {
   text-transform: uppercase;
   color: #000;
   font-family: "Raleway", sans-serif;
   margin: 0;
 }
-.entry-inforomation {
+.entry-information {
   margin-top: 30px;
 }
-.entry-inforomation p.author {
+.entry-information p.author {
   display: inline;
   float: left;
   margin-top: 30px;
@@ -714,4 +721,85 @@ form.reservation-form ::-ms-input-placeholder {
 }
 form.reservation-form input[type="submit"] {
   border: none;
+}
+/** FRONT Page **/
+.home div.hero {
+  height: 750px;
+}
+
+@media only screen and (min-width: 768px) {
+  .home .main-content {
+    margin-top: 0;
+    padding: 0;
+  }
+  .home .hero-text {
+    width: 50%;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .home .hero-text {
+    width: 40%;
+  }
+}
+
+.home .hero-text p {
+  line-height: 40px;
+  font-size: 18px;
+}
+
+.specialty-content {
+  position: relative;
+  overflow: hidden;
+  padding: 0;
+}
+.specialty-content .information {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(241, 159, 48, 0.75);
+  text-align: center;
+  color: #ffffff;
+  padding: 5px;
+  opacity: 0;
+  transition: all 0.5s ease-in-out;
+}
+.specialty-content:hover .information {
+  top: 0;
+  opacity: 1;
+}
+.specialty-content .information .price {
+  font-size: 60px;
+  font-weight: bold;
+  color: #fff;
+  margin-top: 30px;
+}
+.specialty-content .information h3 {
+  font-size: 30px;
+  margin-top: 40px;
+  font-weight: 700;
+}
+.specialty-content .information p {
+  margin: 0 0 10px 0;
+  color: #fff;
+}
+.specialty-content .information a {
+  color: #fff;
+}
+@media only screen and (max-width: 767px) {
+  .specialty-content {
+    overflow: visible;
+    display: block;
+    margin-bottom: 30px;
+  }
+  .specialty-content .information {
+    position: relative;
+    opacity: 1;
+    background-color: #f19f30;
+    padding: 30px;
+  }
+  .specialty-content img {
+    width: 100%;
+  }
 }
